--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body.light {
   --img-changer: url("skull-light.svg");
   --img-dark: url("skull-dark.svg");
 }
+html {
+  scroll-padding-top: 100px;
+}
 body {
   background-color: var(--back-clr);
   overflow-x: hidden;
@@ -276,6 +279,8 @@ header .links div.menu-bar.active .bar-bot {
   transition: all 0.5s ease-in-out;
   transform: translateX(300px);
   opacity: 0;
+  -webkit-box-reflect: below 0
+    linear-gradient(to bottom, transparent 80%, black);
 }
 .sec-one .sec-con .right-con .img-con:hover {
   transform: scale(1.1);
