--- a/style.css
+++ b/style.css
@@ -326,7 +326,12 @@ header .links div.menu-bar.active .bar-bot {
   transform: translateX(300px);
   opacity: 0;
   -webkit-box-reflect: below 0
-    linear-gradient(to bottom, transparent 75%, rgba(0, 0, 0, 0.8));
+    linear-gradient(
+      to bottom,
+      transparent 75%,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.8)
+    );
 }
 .sec-one .sec-con .right-con .img-con:hover {
   transform: scale(1.1);
@@ -1270,6 +1275,14 @@ section.bar-anim .jump3 {
   header .links .fixed-pop li {
     margin-left: 0;
   }
+  header .links .fixed-pop.con-til li {
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transform: translateZ(100px);
+  }
+  /* header .links .fixed-pop.con-til li a {
+    transform: translateZ(100px);
+  } */
   header .links .fixed-pop {
     position: fixed;
     flex-direction: column;
@@ -1280,24 +1293,16 @@ section.bar-anim .jump3 {
     border-radius: 30px;
     backdrop-filter: blur(4px);
     box-shadow: 3px 3px 7px var(--dark-clr), -3px -3px 7px var(--light-clr);
-    margin-top: 6em;
+    margin: 6em 10% 0;
     left: 0px;
-    transform: translateX(12.5%);
     width: 0vw;
     transition: all 0.5s cubic-bezier(1, 1.57, 0, 0.85);
-    overflow: hidden;
+    /* overflow: hidden; */
     visibility: hidden;
     pointer-events: none;
   }
-  header .links .fixed-pop.active::before {
-    content: "";
-    position: absolute;
-    top: var(--y);
-    left: var(--x);
-    background-color: #5f5f5f;
-    transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
+  header .links .fixed-pop.con-til {
+    transform-style: preserve-3d;
   }
   header .links .fixed-pop.active {
     display: flex;
@@ -1451,6 +1456,9 @@ section.bar-anim .jump3 {
   html {
     scroll-padding-top: 20px;
   }
+  .sec-one {
+    padding: 2em 0;
+  }
   .sec-three .sec-con,
   .sec-two .sec-con {
     padding: 1em 0;
@@ -1518,10 +1526,6 @@ section.bar-anim .jump3 {
   }
   .sec-four .sec-con .sec-title {
     margin-bottom: 3.5em;
-  }
-  header .links .fixed-pop.active {
-    width: 84vw;
-    left: -25px;
   }
   header .links div.menu-bar.active .bar-bot,
   header .links div.menu-bar.active .bar-top {
