--- a/style.css
+++ b/style.css
@@ -352,8 +352,6 @@ header .links div.menu-bar.active .bar-bot {
   transition: all 0.5s ease-in-out;
   transform: translateX(300px);
   opacity: 0;
-}
-.sec-one .sec-con .right-con .img-con.active {
   -webkit-box-reflect: below 0
     linear-gradient(
       to bottom,
@@ -361,6 +359,10 @@ header .links div.menu-bar.active .bar-bot {
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.8)
     );
+}
+.sec-one .sec-con .right-con .img-con.active {
+  -webkit-box-reflect: below 0
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
 }
 .sec-one .sec-con .right-con .img-con:hover {
   transform: scale(1.1);
